--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
 		"semantic-ui-react": "^0.74.0",
 		"store2": "^2.5.1",
 		"styled-components": "^2.1.2",
+		"video.js": "^6.2.8",
+		"videojs-hotkeys": "^0.2.20",
+		"videojs-playlist": "^4.0.0",
 		"whatwg-fetch": "^2.0.3"
 	},
 	"devDependencies": {
@@ -78,6 +81,7 @@
 		"friendly-errors-webpack-plugin": "^1.6.1",
 		"git-rev-sync": "^1.9.1",
 		"glob": "^7.1.2",
+		"html-loader": "^0.5.1",
 		"html-webpack-plugin": "^2.30.1",
 		"http-proxy": "^1.16.2",
 		"husky": "^0.14.3",
@@ -111,7 +115,7 @@
 		"stylelint-config-standard": "^17.0.0",
 		"uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
 		"uglifyjs-webpack-plugin": "^0.4.6",
-		"url-loader": "^0.6.1",
+		"url-loader": "^0.6.2",
 		"webpack": "^3.4.1",
 		"webpack-bundle-analyzer": "^2.9.0",
 		"webpack-common-shake": "^1.5.3",
